<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="theme_options_title">Theme options</string>
    <string name="theme_options_key">key_theme</string>
    <string name="theme_default">0</string>
    <string name="nearby_places">Nearby places</string>
    <string name="people">People</string>
    <string name="lookup_settings_label">Forward lookup</string>
    <string name="enable_forward_lookup_title">Forward lookup</string>
    <string name="enable_forward_lookup_summary">Show nearby places when searching in the dialer</string>
    <string name="enable_people_lookup_title">People lookup</string>
    <string name="enable_people_lookup_summary">Show online results for people when searching in the dialer</string>
    <string name="enable_reverse_lookup_title">Reverse lookup</string>
    <string name="enable_reverse_lookup_summary">Look up information about the person or place for unknown numbers on incoming calls</string>
    <string name="forward_lookup_provider_title">Forward lookup provider</string>
    <string name="people_lookup_provider_title">People lookup provider</string>
    <string name="reverse_lookup_provider_title">Reverse lookup provider</string>
    <string name="lookup_disclaimer">Lookups may send queries over a secure protocol (https) to remote websites to gather information. The query may include the other party\'s phone number or the search query</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="wb_amr_format" translatable="false">AMR-WB</string>
    <string name="aac_format" translatable="false">AAC</string>
    <string name="call_playback_no_app_found_toast">No app could be found for playback of the selected recording.</string>
    <string name="call_recording_failed_message">Failed to start call recording</string>
    <string name="call_recording_file_location">Saved call recording to <xliff:g id="filename">%s</xliff:g></string>
    <string name="onscreenCallRecordText">Record call</string>
    <string name="onscreenCallRecordingText">Recording call - <xliff:g example="00:10" id="duration">%1$s</xliff:g></string>
    <string name="onscreenStopCallRecordText">Stop recording</string>
    <string name="recording_time_text">Recording</string>
    <string name="recording_warning_title">Enable call recording?</string>
    <string name="recording_warning_text">Notice: You are responsible for compliance with any laws, regulations and rules that apply to the use of call recording functionality and the use or distribution of those recordings.</string>
    <string name="call_recording_category_key" translatable="false">call_recording_category</string>
    <string name="call_recording_category_title">Call recording</string>
    <string name="call_recording_format_key" translatable="false">call_recording_format</string>
    <string name="call_recording_format">Audio format</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">"Also vibrate for calls</string>
    <string name="dtmf_tone_enable_title">Keypad tones</string>
    <string name="dtmf_tone_length_title">Keypad tone length</string>
    <string-array name="dtmf_tone_length_entries">
        <item>Normal</item>
        <item>Long</item>
    </string-array>
    <string-array name="dtmf_tone_length_entry_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="ringtone_preference_key" translatable="false">button_ringtone_key</string>
    <string name="vibrate_on_preference_key" translatable="false">button_vibrate_on_ring</string>
    <string name="play_dtmf_preference_key" translatable="false">button_play_dtmf_tone</string>
    <string name="dtmf_tone_length_preference_key" translatable="false">button_dtmf_settings</string>
    <string name="a11y_call_duration_format">%1$d %2$s %3$d %4$s</string>
    <string name="a11y_call_duration_short_format">%1$d %2$s</string>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_glide_photo_manager_contact_photo_description">Quick contact for ^1</string>
    <string name="a11y_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="a11y_new_call_log_entry_full_description_with_phone_account_info">^1, ^2, ^3.</string>
    <string name="a11y_new_call_log_entry_full_description_without_phone_account_info">^1, ^2.</string>
    <string name="a11y_new_call_log_entry_phone_account">on ^1, via ^2</string>
    <string name="a11y_new_call_log_entry_tap_action">expand menu</string>
    <string name="a11y_new_call_log_entry_video_call">make a video call to ^1</string>
    <string name="a11y_new_call_log_entry_voice_call">call ^1</string>
    <string name="a11y_voicemail_entry_call">Call number</string>
    <string name="a11y_voicemail_entry_delete">Delete</string>
    <string name="a11y_voicemail_entry_expand_menu">Expand menu for this voicemail entry</string>
    <string name="a11y_voicemail_entry_pause">Pause</string>
    <string name="a11y_voicemail_entry_play">Play</string>
    <string name="a11y_voicemail_entry_speaker">Speaker</string>
    <string name="about_phone_label">About</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="assisted_dialing_setting_cc_category_title">Home country</string>
    <string name="assisted_dialing_setting_cc_default_summary_fallback">Automatically detected</string>
    <string name="assisted_dialing_setting_cc_key">assisted_dialing_setting_cc_key</string>
    <string name="assisted_dialing_setting_cc_title">Default home country</string>
    <string name="assisted_dialing_setting_summary">Predict and add a country code when you call while traveling abroad</string>
    <string name="assisted_dialing_setting_title">Assisted dialing</string>
    <string name="assisted_dialing_setting_toggle_key">assisted_dialing_setting_toggle_key</string>
    <string name="audioroute_bluetooth">Bluetooth</string>
    <string name="audioroute_headset">Wired headset</string>
    <string name="audioroute_phone">Phone</string>
    <string name="audioroute_speaker">Speaker</string>
    <string name="build_version_key">build_version</string>
    <string name="build_version_label">Build version</string>
    <string name="contact_menu_contact_info">Contact info</string>
    <string name="contact_menu_message">Message</string>
    <string name="contact_menu_remove">Remove</string>
    <string name="contact_menu_video_call">Video Call</string>
    <string name="contact_menu_voice_call">Voice Call</string>
    <string name="description_clear_search">Clear search</string>
    <string name="dialer_hint_find_contact">Search contacts</string>
    <string name="display_options_sort_by_given_name_value">sort_by_given_name</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_sort_list_by_key">android.contacts.SORT_ORDER</string>
    <string name="display_options_view_given_name_first_value">view_given_name_first</string>
    <string name="display_options_view_names_as">Name format</string>
    <string name="display_options_view_names_as_key">android.contacts.DISPLAY_ORDER</string>
    <string name="donation_learn_more_url">https://support.google.com/phoneapp/answer/2811844#voicemail_transcript</string>
    <string name="incall_content_description_earpiece">Handset earpiece</string>
    <string name="incall_content_description_muted">Muted</string>
    <string name="incall_content_description_speaker">Speaker</string>
    <string name="incall_content_description_unmuted">Unmuted</string>
    <string name="incall_label_add_call">Add call</string>
    <string name="incall_label_dialpad">Keypad</string>
    <string name="incall_label_mute">Mute</string>
    <string name="incall_label_speaker">Speaker</string>
    <string name="incall_label_swap">Swap</string>
    <string name="licenseActivityLabel">Open source licenses</string>
    <string name="open_source_license_detail_label">License details for open source software</string>
    <string name="open_source_licenses_key">open_source_licenses</string>
    <string name="privacy_policy_key">privacy_policy</string>
    <string name="privacy_policy_label">Privacy policy</string>
    <string name="privacy_policy_url">http://www.google.com/policies/privacy</string>
    <string name="rtt_button_back">Back</string>
    <string name="settings">Settings</string>
    <string name="terms_of_service_key">terms_of_service</string>
    <string name="terms_of_service_label">Terms of service</string>
    <string name="terms_of_service_url">http://www.google.com/policies/terms</string>
    <string name="transcription_learn_more_url">https://support.google.com/phoneapp/answer/2811844?hl=en%26ref_topic=7539039</string>
    <string name="voicemail_advanced_settings_key">voicemail_advanced_settings_key</string>
    <string name="voicemail_advanced_settings_title">Advanced Settings</string>
    <string name="voicemail_change_greeting_key">voicemail_change_greeting_key</string>
    <string name="voicemail_change_greeting_preference_title">Voicemail greeting</string>
    <string name="voicemail_change_pin_key">voicemail_change_pin_key</string>
    <string name="voicemail_change_pin_preference_title">Change PIN</string>
    <string name="voicemail_media_player_inital_start_position">00:00</string>
    <string name="voicemail_media_player_state">Loading Voicemail</string>
    <string name="voicemail_notifications_key">voicemail_notification_key</string>
    <string name="voicemail_notifications_preference_title">Notifications</string>
    <string name="voicemail_settings_title">Voicemail</string>
    <string name="voicemail_visual_voicemail_archive_key">archive_is_enabled</string>
    <string name="voicemail_visual_voicemail_auto_archive_switch_title">Extra backup and storage</string>
    <string name="voicemail_visual_voicemail_donation_key">donate_voicemails</string>
    <string name="voicemail_visual_voicemail_donation_switch_title">Voicemail transcription analysis</string>
    <string name="voicemail_visual_voicemail_key">voicemail_visual_voicemail_key</string>
    <string name="voicemail_visual_voicemail_switch_title">Visual voicemail</string>
    <string name="voicemail_visual_voicemail_transcription_key">transcribe_voicemails</string>
    <string name="voicemail_visual_voicemail_transcription_switch_title">Voicemail transcription</string>
</resources>