<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/assisted_dialing_setting_toggle_key"
        android:summary="@string/assisted_dialing_setting_summary"
        android:title="@string/assisted_dialing_setting_title" />
    <PreferenceCategory android:title="@string/assisted_dialing_setting_cc_category_title">
        <ListPreference
            android:defaultValue=""
            android:dependency="@string/assisted_dialing_setting_toggle_key"
            android:entries="@array/assisted_dialing_cc_entries"
            android:entryValues="@array/assisted_dialing_cc_values"
            android:key="@string/assisted_dialing_setting_cc_key"
            android:summary="@string/assisted_dialing_setting_cc_default_summary_fallback"
            android:title="@string/assisted_dialing_setting_cc_title" />
    </PreferenceCategory>
</PreferenceScreen>