<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180.0dip"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8.0dip"
    android:paddingBottom="8.0dip">

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/menu_mute"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_mic_off_vd_theme_24"
        android:text="@string/incall_label_mute"
        app:contentDescriptionChecked="@string/incall_content_description_muted"
        app:contentDescriptionUnchecked="@string/incall_content_description_unmuted" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/menu_speaker"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_volume_up_vd_theme_24"
        android:text="@string/incall_label_speaker"
        app:contentDescriptionChecked="@string/incall_content_description_speaker"
        app:contentDescriptionUnchecked="@string/incall_content_description_earpiece" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/menu_keypad"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_dialpad_vd_theme_24"
        android:text="@string/incall_label_dialpad" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/menu_add_call"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_add_call_vd_theme_24"
        android:text="@string/incall_label_add_call" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/menu_swap_call"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_swap_calls_vd_theme_24"
        android:text="@string/incall_label_swap"
        android:visibility="gone" />
</LinearLayout>