<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/display_options_sort_by_given_name_value"
        android:dialogTitle="@string/display_options_sort_list_by"
        android:entries="@array/contact_sort_order_entries"
        android:entryValues="@array/contact_sort_order_values"
        android:key="@string/display_options_sort_list_by_key"
        android:summary="%s"
        android:title="@string/display_options_sort_list_by" />
    <ListPreference
        android:defaultValue="@string/display_options_view_given_name_first_value"
        android:dialogTitle="@string/display_options_view_names_as"
        android:entries="@array/contact_display_order_entries"
        android:entryValues="@array/contact_display_order_values"
        android:key="@string/display_options_view_names_as_key"
        android:summary="%s"
        android:title="@string/display_options_view_names_as" />
</PreferenceScreen>