<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/starred_contact_context_menu_title"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@id/voice_call_container"
        android:icon="@drawable/quantum_ic_phone_vd_theme_24"
        android:title="@string/contact_menu_voice_call" />
    <item
        android:id="@id/video_call_container"
        android:icon="@drawable/quantum_ic_videocam_vd_theme_24"
        android:title="@string/contact_menu_video_call" />
    <item
        android:id="@id/send_message_container"
        android:icon="@drawable/quantum_ic_message_vd_theme_24"
        android:title="@string/contact_menu_message" />
    <item
        android:id="@id/remove_container"
        android:icon="@drawable/quantum_ic_close_vd_theme_24"
        android:title="@string/contact_menu_remove" />
    <item
        android:id="@id/contact_info_container"
        android:icon="@drawable/context_menu_contact_icon"
        android:title="@string/contact_menu_contact_info" />
</menu>