<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180.0dip"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8.0dip"
    android:paddingBottom="8.0dip">

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/audioroute_back"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_arrow_back_vd_theme_24"
        android:text="@string/rtt_button_back" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/dialer_divider_line_color" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/audioroute_bluetooth"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_bluetooth_audio_vd_theme_24"
        android:text="@string/audioroute_bluetooth" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/audioroute_speaker"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_volume_up_vd_theme_24"
        android:text="@string/audioroute_speaker" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/audioroute_earpiece"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_phone_in_talk_vd_theme_24"
        android:text="@string/audioroute_phone" />

    <com.android.incallui.rtt.impl.RttCheckableButton
        android:id="@id/audioroute_headset"
        style="@style/RttButton"
        android:drawableStart="@drawable/quantum_ic_headset_vd_theme_24"
        android:text="@string/audioroute_headset" />
</LinearLayout>