<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/voicemail_media_player_padding_top">

    <TextView
        android:id="@id/playback_state_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/voicemail_media_player_state"
        android:textSize="@dimen/voicemail_playback_state_text_size"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@id/playback_position_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/voicemail_media_player_inital_start_position"
            android:textSize="@dimen/voicemail_duration_size" />

        <SeekBar
            android:id="@id/playback_seek"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:max="0"
            android:progress="0" />

        <TextView
            android:id="@id/playback_seek_total_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:textSize="@dimen/voicemail_duration_size" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10.0dip"
        android:weightSum="4.0">

        <ImageButton
            android:id="@id/pauseButton"
            style="@style/voicemail_media_player_buttons"
            android:layout_weight="1.0"
            android:contentDescription="@string/a11y_voicemail_entry_pause"
            android:src="@drawable/quantum_ic_pause_vd_theme_24"
            android:visibility="gone" />

        <ImageButton
            android:id="@id/playButton"
            style="@style/voicemail_media_player_buttons"
            android:layout_weight="1.0"
            android:contentDescription="@string/a11y_voicemail_entry_play"
            android:src="@drawable/quantum_ic_play_arrow_vd_theme_24" />

        <ImageButton
            android:id="@id/speakerButton"
            style="@style/voicemail_media_player_buttons"
            android:layout_weight="1.0"
            android:contentDescription="@string/a11y_voicemail_entry_speaker"
            android:src="@drawable/quantum_ic_volume_up_vd_theme_24" />

        <ImageButton
            android:id="@id/phoneButton"
            style="@style/voicemail_media_player_buttons"
            android:layout_weight="1.0"
            android:contentDescription="@string/a11y_voicemail_entry_call"
            android:src="@drawable/quantum_ic_phone_vd_theme_24" />

        <ImageButton
            android:id="@id/deleteButton"
            style="@style/voicemail_media_player_buttons"
            android:layout_weight="1.0"
            android:contentDescription="@string/a11y_voicemail_entry_delete"
            android:src="@drawable/quantum_ic_delete_vd_theme_24" />
    </LinearLayout>
</LinearLayout>