<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@id/audioroute_speaker"
        style="@style/AudioRouteItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/quantum_ic_volume_up_grey600_24"
        android:text="@string/audioroute_speaker"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@id/audioroute_earpiece"
        style="@style/AudioRouteItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_phone_audio_grey600_24dp"
        android:text="@string/audioroute_phone"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@id/audioroute_headset"
        style="@style/AudioRouteItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/quantum_ic_headset_grey600_24"
        android:text="@string/audioroute_headset"
        android:textAlignment="viewStart" />
</LinearLayout>