<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/search_box_expanded"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/expanded_search_bar_height"
    android:visibility="invisible">

    <ImageButton
        android:id="@id/search_back_button"
        android:layout_width="48.0dip"
        android:layout_height="48.0dip"
        android:layout_centerVertical="true"
        android:layout_marginStart="8.0dip"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_menu_back_from_search"
        android:src="@drawable/quantum_ic_arrow_back_vd_theme_24" />

    <EditText
        android:id="@id/search_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="8.0dip"
        android:layout_toStartOf="@id/search_clear_button"
        android:layout_toEndOf="@id/search_back_button"
        android:autofillHints=""
        android:hint="@string/dialer_hint_find_contact"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textFilter"
        android:maxLines="1"
        android:minHeight="48.0dip"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="16.0sp" />

    <ImageView
        android:id="@id/search_clear_button"
        android:layout_width="48.0dip"
        android:layout_height="48.0dip"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/description_clear_search"
        android:scaleType="center"
        android:src="@drawable/quantum_ic_close_vd_theme_24"
        android:visibility="gone" />
</RelativeLayout>